[package]
name = "frame-azure-client"
version = "0.1.0"
authors = ["LayerX Labs <div-labs@layerx.co.jp>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
url = "2.2"
reqwest = { version = "0.11", features = ["json"] }
azure_core = { version = "0.1", git = "https://github.com/Azure/azure-sdk-for-rust.git" }
azure_storage = { version = "0.1", git = "https://github.com/Azure/azure-sdk-for-rust.git", default-features = false, features = ["blob"] }

[dev-dependencies]
azure_core = { version = "0.1", git = "https://github.com/Azure/azure-sdk-for-rust.git",  default-features = false, features = ["azurite_workaround"]}
azure_storage = { version = "0.1", git = "https://github.com/Azure/azure-sdk-for-rust.git", default-features = false, features = ["blob", "azurite_workaround"] }
env_logger = "0.8"

[features]
default = ["blob"]
blob = []