[package]
name = "frame-common"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_trts = { version = "1.1.1", optional = true }
anyhow = { version = "1.0", optional = true }
sgx-anyhow = { rev = "sgx_1.1.2", package = "anyhow", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
serde-std = { package = "serde", version = "1", default-features = false, optional = true }
serde-sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx.git", rev = "sgx_1.1.2", default-features = false, optional = true }
tiny-keccak = "1.4"
ed25519-dalek = { version = "1.0.0-pre.2", default-features = false, features = ["u64_backend"] }
codec = { package = "parity-scale-codec", version = "1.1", default-features = false, features = ["derive"] }
sha2 = { version = "0.8", default-features = false }
web3 = { git = "https://github.com/tomusdrw/rust-web3", rev = "d7393708e257f7ef4ad354917889a8001cf2927c", optional = true }
rand = { version = "0.6", optional = true }
rand_core = { version = "0.3", optional = true }
rand_os = { version = "0.1", optional = true }
base64 = { version = "0.11", optional = true }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
sgx-elastic-array = { package = "elastic-array", tag = "sgx_1.1.2", git = "https://github.com/mesalock-linux/elastic-array-sgx.git", optional = true }
elastic-array = { version = "0.10", optional = true }

[features]
default = ["std"]
std = [
    "anyhow",
    "serde-std/std",
    "serde-std/derive",
    "base64",
    "web3",
    "rand",
    "rand_core",
    "rand_os",
    "elastic-array",
]
sgx = [
    "sgx_tstd",
    "sgx_trts",
    "sgx-anyhow",
    "serde-sgx",
    "serde-sgx/derive",
    "sgx-elastic-array",
]