[package]
name = "frame-common"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
sgx_trts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
anyhow = { version = "1.0", optional = true }
sgx-anyhow = { rev = "sgx_1.1.3", package = "anyhow", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
serde-std = { package = "serde", version = "1", default-features = false, optional = true }
serde-sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx.git", default-features = false, optional = true, features = ["derive"] }
serde-big-array-std = { package = "serde-big-array", version = "0.2", optional = true }
serde-big-array-sgx = { package = "serde-big-array", git = "https://github.com/mesalock-linux/serde-big-array-sgx", rev = "sgx_1.1.3", optional = true }
bincode-std = { package = "bincode", version = "1.3", optional = true }
bincode-sgx = { package = "bincode", git = "https://github.com/mesalock-linux/bincode-sgx", optional = true }
serde_bytes_std = { package = "serde_bytes", version = "0.11", optional = true }
serde_bytes_sgx = { package = "serde_bytes", git = "https://github.com/mesalock-linux/serde-bytes-sgx", optional = true }
serde_json_sgx = { package = "serde_json", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/serde-json-sgx", optional = true }
serde_json_std = { package = "serde_json", version = "1.0", optional = true }
tiny-keccak = "1.4"
ed25519-dalek = { version = "1.0.0-pre.2", default-features = false, features = ["u64_backend"] }
sha2 = { version = "0.8", default-features = false }
web3 = { version = "0.14", optional = true }
rand = { version = "0.7", optional = true }
rand_core = { version = "0.3", optional = true }
rand_os = { version = "0.1", optional = true }
base64 = { version = "0.11", optional = true }
hex = { version = "0.4", default-features = false }
once_cell_sgx = { package = "once_cell", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/once_cell-sgx", optional = true }
once_cell_std = { package = "once_cell", version = "1.5", optional = true }

[features]
default = ["std"]
std = [
    "anyhow",
    "serde-std/std",
    "serde-std/derive",
    "serde-big-array-std",
    "bincode-std",
    "serde_bytes_std",
    "base64",
    "web3",
    "rand",
    "rand_core",
    "rand_os",
    "once_cell_std",
    "serde_json_std",
]
sgx = [
    "sgx_tstd",
    "sgx_trts",
    "sgx-anyhow",
    "serde-sgx",
    "serde-sgx/derive",
    "serde_json_sgx",
    "bincode-sgx",
    "serde_bytes_sgx",
    "serde-big-array-sgx",
    "once_cell_sgx",
]