[package]
name = "frame-config"
version = "0.1.0"
authors = ["osuketh <dish230@gmail.com>"]
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
once_cell_sgx = { package = "once_cell", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/once_cell-sgx", optional = true }
once_cell_std = { package = "once_cell", version = "1.5", optional = true }
hex = { version = "0.4", default-features = false, optional = true }

[features]
default = ["std"]
std = [
    "once_cell_std",
]
sgx = [
    "sgx_tstd",
    "once_cell_sgx",
    "hex",
]
