[package]
name = "frame-config"
version = "0.5.4"
authors = ["LayerX Labs <div-labs@layerx.co.jp>"]
edition = "2018"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
hex = { version = "0.4", default-features = false, optional = true }
pem = { version = "0.8.2", git = "https://github.com/mesalock-linux/pem-rs-sgx", optional = true }

[features]
default = ["std"]
std = []
sgx = [
    "sgx_tstd",
    "hex",
    "pem",
]
