[package]
name = "frame-ecies"
version = "0.1.0"
authors = ["cipepser <respepic@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
frame-common = { path = "../common", default-features = false }
test-utils = { path = "../../tests/utils", optional = true }
anyhow = { version = "1.0", optional = true }
sgx-anyhow = { rev = "sgx_1.1.3", package = "anyhow", git = "https://github.com/mesalock-linux/anyhow-sgx.git", optional = true }
std-libsecp256k1 = { package = "libsecp256k1", git = "https://github.com/paritytech/libsecp256k1.git", rev = "12e3829d6cd2d6459c2c920d7cf222f3a930b955", optional = true }
sgx-libsecp256k1 = { package = "libsecp256k1", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/libsecp256k1-rs-sgx", optional = true }
std_rand = { package = "rand", version = "0.6", optional = true }
sgx_rand = { package = "rand", rev = "v0.7.3_sgx1.1.3", git = "https://github.com/mesalock-linux/rand-sgx", optional = true }
std_rand_core = { package = "rand_core", version = "0.3", optional = true }
sgx_rand_core = { package = "rand_core", rev = "v0.7.3_sgx1.1.3", git = "https://github.com/mesalock-linux/rand-sgx", optional = true }
std-ring = { package = "ring", version = "0.16.15", optional = true }
sgx-ring = { package = "ring", git = "https://github.com/mesalock-linux/ring-sgx", tag = "v0.16.5", optional = true }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "backtrace"], optional = true }
serde-std = { package = "serde", version = "1", default-features = false, optional = true }
serde-sgx = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx.git", default-features = false, optional = true, features = ["derive"] }
bincode-std = { package = "bincode", version = "1.3", optional = true }
bincode-sgx = { package = "bincode", git = "https://github.com/mesalock-linux/bincode-sgx", optional = true }
serde_bytes_std = { package = "serde_bytes", version = "0.11", optional = true }
serde_bytes_sgx = { package = "serde_bytes", git = "https://github.com/mesalock-linux/serde-bytes-sgx", optional = true }
base64-sgx = { package = "base64", rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/rust-base64-sgx", optional = true }
base64-std = { package = "base64", version = "0.11", optional = true }
js-sys = { version = "0.3.46", optional = true }
wasm-bindgen = { version = "0.2.69", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[features]
default = ["std"]
std = [
    "frame-common/std",
    "anyhow",
    "std-libsecp256k1",
    "std_rand",
    "std_rand_core",
    "std-ring",
    "serde-std/std",
    "serde-std/derive",
    "bincode-std",
    "serde_bytes_std",
    "base64-std",
    "js-sys",
    "wasm-bindgen",
]
sgx = [
    "frame-common/sgx",
    "test-utils",
    "sgx-anyhow",
    "sgx-libsecp256k1",
    "sgx_rand",
    "sgx_rand_core",
    "sgx-ring",
    "sgx_tstd",
    "serde-sgx",
    "serde-sgx/derive",
    "bincode-sgx",
    "serde_bytes_sgx",
    "base64-sgx",
]